# boots

./: .cargo-generate  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  ci.yml  semver.yml  test.yml
boots/: Cargo.toml
crates/boots-cli/: Cargo.toml
crates/boots-core/: Cargo.toml
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: common.rs  integration.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: adder.rs  error.rs  generator.rs  lib.rs
crates/core/src/config/: mod.rs  parser.rs  types.rs
crates/core/src/generator/: mod.rs  project.rs
crates/core/src/template/: embedded.rs  engine.rs  mod.rs
crates/core/templates/base/: Cargo.workspace.toml  Makefile  README.md
crates/core/templates/docker/: Dockerfile
crates/core/templates/frontend/spa/: Dockerfile  docker-compose.service.yml  nginx.conf
crates/core/templates/frontend/ssr/: Dockerfile  next.config.ts  package.json
crates/core/templates/frontend/ssr/app/: globals.css  layout.tsx  page.tsx
crates/core/templates/github/: test.yml
crates/core/templates/modules/api/: Cargo.toml  routes.rs
crates/core/templates/modules/api/handlers/: mod.rs
crates/core/templates/modules/cli/: Cargo.toml  Cargo_service.toml  main.rs
crates/core/templates/modules/client/: lib.rs
crates/core/templates/modules/persistence/: lib.rs
crates/core/templates/modules/runtime/: Cargo.toml  server.rs
crates/core/templates/proto/: service.proto
crates/core/templates/samples/: Makefile  docker-compose.yml
crates/core/templates/samples/api/: routes.rs
crates/core/templates/samples/api/handlers/: mod.rs
crates/core/templates/samples/auth/: admin.token  mod.rs  token.rs
crates/core/templates/samples/board/: mod.rs  models.rs
crates/core/templates/samples/dns/: healthcheck.rs
crates/core/templates/samples/docs/: api.md  architecture.md  e2e-testing.md
crates/core/templates/samples/e2e/: playwright.config.ts
template/: .gitignore
template/.github/workflows/: semver.yml  test.yml
templates/base/: Cargo.workspace.toml  docker-compose.yml  env.example  gitignore
templates/docker/: Dockerfile  dockerignore
templates/frontend/spa/: package.json
templates/frontend/spa/src/: App.tsx
templates/frontend/ssr/: docker-compose.service.yml
templates/github/: build.yml  release.yml
templates/modules/api/: Cargo.toml
templates/modules/cli/: main_service.rs
templates/modules/client/: Cargo.toml  http.rs
templates/modules/core/: Cargo.toml  error.rs
templates/modules/core/examples/: basic.rs
templates/modules/persistence/: Cargo.toml
templates/samples/: Makefile  README.md
templates/samples/api/handlers/: mod.rs
templates/samples/auth/: role.rs
templates/samples/board/: permission.rs
templates/samples/cli/: main.rs
templates/samples/dns/: mod.rs
templates/samples/e2e/: package.json
templates/samples/e2e/helpers/: auth.ts
templates/samples/e2e/tests/: posts.spec.ts
templates/samples/telemetry/: healthcheck.rs  log.rs  metric.rs  mod.rs  trace.rs
