[workspace]
resolver = "2"
members = ["boots","crates/*", "plugins/*"]
exclude = ["templates", "examples/generated"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["1eedaegon"]
license = "MIT"
repository = "https://github.com/1eedaegon/boots"
rust-version = "1.90"


[workspace.dependencies]
boots-core = { path = "crates/boots-core" }
boots-templates = { path = "crates/boots-templates" }
boots-api = { path = "plugins/boots-api" }
anyhow =  "1.0.100"
serde = "v1.0.226"
serde_json = "1.0.145"
toml = "0.9.7"
clap ={ version = "4.5.48", features = ["derive", "cargo", "env"] }


[workspace.dev-dependencies]
# insta = { version = "1.40", features = ["yaml", "glob"] }
# proptest = "1.5"
# criterion = "0.5"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.dev]
debug = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
debug = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

# CI용 프로파일
[profile.ci]
inherits = "test"
incremental = false

[workspace.metadata.release]
shared-version = true
tag-prefix = "v"
pre-release-commit-message = "chore: release"
