[workspace]
resolver = "2"
members = ["crates/core","crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["1eedaegon"]
license = "MIT"
repository = "https://github.com/1eedaegon/boots"
rust-version = "1.90"


[workspace.dependencies]
anyhow =  "1.0.100"
toml_edit = "0.23.6"
serde = "1.0.228"
clap = {version="4.5.48", features=["derive"]}
