[workspace]
resolver = "2"
members = ["crates/core","crates/cli"]

[workspace.package]
version = "0.1.4"
edition = "2024"
authors = ["1eedaegon"]
description = "Rust template generator for modular architectures(monorepo)"
license = "MIT"
repository = "https://github.com/1eedaegon/boots"
homepage = "https://github.com/1eedaegon/boots"
documentation = "https://github.com/1eedaegon/boots"
readme = "README.md"
keywords = ["template", "generator", "cargo", "modular-architecture", "monorepo"]
categories = ["development-tools"]
rust-version = "1.90"


[workspace.dependencies]
anyhow = "1.0.100"
thiserror = "1"
toml_edit = "0.23.6"
serde = "1.0.228"
clap = { version = "4.5.48", features = ["derive"] }
