[package]
name = "boots"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../../README.md"

include = ["src/**/*", "Cargo.toml"]

[[bin]]
name = "cargo-boots"
path = "src/main.rs"

[[bin]]
name = "boots"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
boots-core = { version = "0.1.3", path = "../core" }
clap.workspace = true
dialoguer = "0.12.0"
