[package]
name = "boots-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../../README.md"
include = [
    "src/**/*",
]

[dependencies]
anyhow.workspace = true
cargo-generate = { version = "0.21", default-features = false, features = ["vendored-openssl"] }
dialoguer = "0.12.0"
toml_edit.workspace = true
