[package]
name = "boots-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../../README.md"
include = [
    "src/**/*",
    "templates/**/*",
]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
rust-embed = "8"
toml_edit.workspace = true
