[package]
name = "{{project_name}}-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
{{project_name}}-core = { path = "../core" }
anyhow.workspace = true
axum = "0.7"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
{{grpc_deps}}
