[package]
name = "{{project_name}}-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
{{project_name}}-core = { path = "../core" }
anyhow.workspace = true
reqwest = { version = "0.11", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
